# tp-argentum

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  config.toml  create_test_players  installer.sh
.github/workflows/: pre-commit.yml
assets/mapa/: Fuente.tsx  accesorioCementerio.tsx  accesorioCiudad.tsx  accesorioCiudad2.tsx  accesorioCiudad3.tsx  accesorios.tsx  accesorios1.tsx  accesorios2.tsx  accesorios3.tsx  accesorios5.tsx  accesoriosMuelle.tsx  accesoriosOscuros.tsx  accesorioscespednegro.tsx  agua.tsx  altar.tsx  altarIglesia.tsx  arboles.tsx  arboles2.tsx  arbolsakura.tsx  bar.tsx  barril.tsx  bosque.tmx  bosqueOscuro.tmx  carretas.tsx  carteles.tsx  casaOscura.tsx  casaRota.tsx  castillo1completo.tsx  castillo1partes.tsx  castillo2partes.tsx  cercaHorizontal.tsx  cercaVertical.tsx  cespedclaro.tsx  cespednegro.tsx  cespednegroclaro.tsx  cespedoscuro1.tsx  cespedoscuro3.tsx  ciudad.tmx  cuerno1.tsx  cuerno2.tsx  (+27 more)
client/: CMakeLists.txt  main.cpp
client/audio/: audio_assets.h  audio_manager.cpp  audio_manager.h
client/config/: client_config.cpp  client_config.h
client/game/: client_game_state.cpp  client_game_state.h  entity_keys.h  floating_kind.h
client/input/: input_handler.cpp  input_handler.h  key_action.h
client/net/: client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  server_connection.cpp  server_connection.h
client/protocol/: client_command.h  game_update.h  protocol.cpp  protocol.h  protocol_defs.h  wire_reader.cpp  wire_reader.h
client/render/: animation.cpp  animation.h  asset_paths.h  character_animator.cpp  character_animator.h  colors.h  effect_data.h  effect_kind.h  hud_renderer.cpp  hud_renderer.h  map_data.cpp  map_data.h  sprite_data.h  sprite_registry.cpp  sprite_registry.h  text_renderer.cpp  text_renderer.h  texture_manager.cpp  texture_manager.h  tile_catalog.cpp  tile_catalog.h  tmx_loader.cpp  tmx_loader.h  world_renderer.cpp  world_renderer.h
client/render/effects/: effect_data.cpp  effect_data.h  effect_kind.h  effect_spawn.h
client/render/map/: map_data.cpp  map_data.h  tile_catalog.cpp  tile_catalog.h  tmx_loader.cpp  tmx_loader.h
client/render/sprites/: animation.cpp  animation.h  character_animator.cpp  character_animator.h  head_adjuster.cpp  head_adjuster.h  item_sprite_registry.cpp  item_sprite_registry.h  sprite_constants.h  sprite_data.cpp  sprite_data.h  sprite_registry.cpp  (+3 more)
client/ui/: client_app.cpp  client_app.h  command_parser.cpp  command_parser.h  connect_result.h  console.cpp  console.h  menu_result.h  menu_screen.cpp  menu_screen.h
common/: CMakeLists.txt  command.cpp  command.h  protocol_defs.h  queue.h  receiver.cpp  receiver.h  sender.h  snapshot.cpp  snapshot.h  thread.h
common/command/: CMakeLists.txt  command.cpp  command.h  command_codec.cpp  command_codec.h  packet_helpers.cpp  packet_helpers.h
common/network/: CMakeLists.txt  liberror.cpp  liberror.h  resolver.cpp  resolver.h  resolvererror.cpp  resolvererror.h  socket.cpp  socket.h  socket_helpers.cpp  socket_helpers.h
common/snapshot/: CMakeLists.txt  snapshot.cpp  snapshot.h  snapshot_codec.cpp  snapshot_codec.h  snapshot_outgoing.h
config/: client.toml  server.toml
docs/: documentacion_tecnica.md  manual_de_proyecto.md  manual_de_usuario.md
docs/diagrams/: README.me
game/: CMakeLists.txt  clan.cpp  clan.h  config.cpp  config.h  formulas.cpp  formulas.h  game.cpp  game.h  map.cpp  map.h  mapa.cpp  mapa.h  mundo.cpp  mundo.h  snapshot_factory.cpp  snapshot_factory.h  tmx_loader.cpp  tmx_loader.h
game/banco/: cuentaBanco.cpp  cuentaBanco.h
game/characters/: character.cpp  character.h  criatura.cpp  criatura.h  jugador.cpp  jugador.h
game/clases/: charClase.cpp  charClase.h  clerigo.cpp  clerigo.h  guerrero.cpp  guerrero.h  mago.cpp  mago.h  paladin.cpp  paladin.h
game/criaturas/: arana.cpp  arana.h  criatura.cpp  criatura.h  esqueleto.cpp  esqueleto.h  goblin.cpp  goblin.h  golem.cpp  golem.h  orco.cpp  orco.h  zombie.cpp  zombie.h
game/game/: game.cpp  game.h  gameComandos.cpp  gameComandosClan.cpp  gameComandosComercio.cpp  gameComandosItems.cpp  gameCombate.cpp  gameMundo.cpp
game/items/: arma.cpp  arma.h  armadura.cpp  armadura.h  baculo.cpp  baculo.h  casco.cpp  casco.h  escudo.cpp  escudo.h  inventario.cpp  inventario.h  item.cpp  item.h  itemFactory.cpp  itemFactory.h  item_defs.h  oro.cpp  oro.h  pocion.cpp  pocion.h
game/razas/: elfo.cpp  elfo.h  enano.cpp  enano.h  gnomo.cpp  gnomo.h  humano.cpp  humano.h  raza.cpp  raza.h
saves/: players.toml
scripts/: cargar_inventario.cpp  cargar_inventario_cpp  create_test_players.cpp  protocol_test_utils.py  test_inventory.py
server/: CMakeLists.txt  acceptor.cpp  acceptor.h  client_handler.cpp  client_handler.h  config.cpp  config.h  game_loop.cpp  game_loop.h  main.cpp  receiver.cpp  receiver.h  server.h  server_config.cpp  world.cpp  world.h
server/acceptor/: CMakeLists.txt  acceptor.cpp  acceptor.h
server/client/: CMakeLists.txt  client_handler.cpp  client_handler.h  monitor_clients.cpp  monitor_clients.h  quit_listener.cpp  quit_listener.h
server/config/: CMakeLists.txt  server_config.h
server/game/: CMakeLists.txt  game_loop.cpp  game_loop.h
server/network/: CMakeLists.txt  receiver.cpp  receiver.h
server/persistence/: CMakeLists.txt  persistance_loader.cpp  persistance_loader.h  persistence_index_record.h  persistence_job.h  persistence_loader.cpp  persistence_loader.h  persistence_record.h  persistence_record_mapper.cpp  persistence_record_mapper.h  persistence_task.h  persistence_task_factory.cpp  persistence_task_factory.h  persistence_worker.cpp  persistence_worker.h
server/persistence/clan/: CMakeLists.txt  clan_loader.cpp  clan_loader.h  clan_record.h  clan_record_mapper.cpp  clan_record_mapper.h  clan_saver.cpp  clan_saver.h
server/persistence/players/: CMakeLists.txt  persistence_index_record.h  persistence_loader.cpp  persistence_loader.h  persistence_record.h  persistence_record_mapper.cpp  persistence_record_mapper.h
tests/: CMakeLists.txt  dummy_test.cpp  protocol_test.cpp
(+30 files in other folders)
